<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project 0 :My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotifyStreamer">Spotify Streamer</string>
    <string name="scoreApp">Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildIt">Build It Bigger</string>
    <string name="xyzReader">XYZ Reader</string>
    <string name="capstone">Capstone </string>

</resources>
