<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.project0myappportfolio.MainActivity" >

    <Button
        android:id="@+id/button_spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="@string/spotifyStreamer" />

    <Button
        android:id="@+id/button_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_spotify"
        android:layout_alignRight="@+id/button_spotify"
        android:layout_below="@+id/button_spotify"
        android:background="@drawable/button_background"
        android:layout_marginTop="10dp"
        android:text="@string/scoreApp" />

    <Button
        android:id="@+id/button_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_spotify"
        android:layout_alignRight="@+id/button_spotify"
        android:layout_below="@+id/button_score"
        android:background="@drawable/button_background"
        android:layout_marginTop="10dp"
        android:text="@string/libraryApp" />
    
    <Button
        android:id="@+id/button_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_spotify"
        android:layout_alignRight="@+id/button_spotify"
        android:layout_below="@+id/button_library"
        android:background="@drawable/button_background"
        android:layout_marginTop="10dp"
        android:text="@string/buildIt" />
 
    <Button
        android:id="@+id/button_xyz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_spotify"
        android:layout_alignRight="@+id/button_spotify"
        android:layout_below="@+id/button_build"
        android:background="@drawable/button_background"
        android:layout_marginTop="10dp"
        android:text="@string/xyzReader" />
    
    <Button
        android:id="@+id/button_capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_spotify"
        android:layout_alignRight="@+id/button_spotify"
        android:layout_below="@+id/button_xyz"
        android:background="@drawable/button_background_red"
        android:layout_marginTop="10dp"
        android:text="@string/capstone" />
    
</RelativeLayout>
